# puredb

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  ROADMAP.md
crates/access/: Cargo.toml
crates/access/tests/: btree.rs
crates/catalog/: Cargo.toml
crates/catalog/tests/: catalog.rs
crates/concurrency/: Cargo.toml
crates/concurrency/tests/: transactions.rs
crates/execution/: Cargo.toml
crates/execution/tests/: executor.rs
crates/network/: Cargo.toml
crates/network/tests/: protocol.rs
crates/puredb/: Cargo.toml
crates/recovery/: Cargo.toml
crates/recovery/tests/: wal.rs
crates/sql/: Cargo.toml
crates/sql/tests/: parser.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: common.rs  disk_manager.rs  lib.rs  page.rs
crates/storage/tests/: disk_manager.rs  page.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
phases/01-storage-engine/: README.md
phases/02-tuple-layout-catalog/: README.md
phases/03-access-methods/: README.md
phases/04-execution-engine/: README.md
phases/05-sql-parser-planner/: README.md
phases/06-concurrency-control/: README.md
phases/07-recovery/: README.md
phases/08-network-layer/: README.md
phases/09-replication-consensus/: README.md
phases/10-snapshots-data-reduction/: README.md
